--- a/pretenção.html
+++ b/pretenção.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&family=Roboto:wght@500&display=swap" rel="stylesheet">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -83,6 +86,7 @@
             </article>
 
             <h1 class="bg-success mt-5 p-2">Pretenção Salarial</h1>
+            <article class="fs-5">
                 Estágio:
                 Valor mínimo de R$500 <br>
 
@@ -91,7 +95,7 @@
             </article>
 
             <h1 class="bg-success mt-5 p-2">Localidade da Vaga</h1>
-            <article>
+            <article class="fs-5">
                 No local: <br>
                 Juiz de Fora <br> <br>
 
