--- a/atividade01/index.html
+++ b/atividade01/index.html
@@ -60,9 +60,9 @@
 <body class="bg-dark">
     
     <div id="container">
-        <header class="p-3 bg-success text-center fs-2">
+        <header class="row p-3 bg-success text-center fs-2">
 
-            <nav class="navbar navbar-expand-sm navbar-dark bg-success p-2 fs-2">
+            <nav class="col-12 navbar navbar-expand-sm navbar-dark bg-success p-2 fs-2">
                 <h1>Menu</h1>
 
                 <!--Menu Sanduiche (Hamburguer)
