--- a/atividade02/index.html
+++ b/atividade02/index.html
@@ -4,62 +4,293 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Document</title>
+    <style>
+        html {
+            scroll-behavior: smooth;
+        }
+
+        body {
+            background-color: #d7d7d9;
+        }
+
+        h1 {
+            color: #734743;
+            font-family: 'Ubuntu', sans-serif;
+            font-size: 5em;
+        }
+
+        h2 {
+            color: #0e3a73;
+            font-family: 'Ubuntu' sans-serif;
+        }
+
+        section {
+            color: #0e3a73;
+        }
+
+        section span {
+            color: red;
+        }
+
+        .row {
+            margin-top: 10%;
+        }
+    </style>    
+    <title>Tabelas</title>
 </head>
 <body>
     
     <main class="container">
-        <div class="row">
-            <h1 class="display-5">Table-sm</h1>
+        <h1 class="display-1 text-center mb-5">Estudo de Tabelas <br>
+            em Bootstrap
+        </h1>
+        <div class="row" id="tabela1">
+            <h2>Table-sm</h2>
             <hr>
-            <div class="col-6">
-                <table class="table table-bordered table-sm">
+            <div class="col-12 col-xl-6">
+                <table class="table table-sm">
                     <thead>
                         <tr>
                             <th>Nome</th>
+                            <th>Sobrenome</th>
                             <th>Ano Nascimento</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
                             <td>Patrício</td>
+                            <td>Samuel</td>
                             <td>2001</td>
                         </tr>
                         <tr>
+                            <td>João</td>
                             <td>Teste</td>
-                            <td>2000</td>
+                            <td>1999</td>
+                        </tr>
+                        <tr>
+                            <td>Maria</td>
+                            <td>Helena</td>
+                            <td>1980</td>
+                        </tr>
+                        <tr>
+                            <td>Lucas</td>
+                            <td>Silva</td>
+                            <td>1980</td>
+                        </tr>
+                        <tr>
+                            <td>Mateus</td>
+                            <td>Costa</td>
+                            <td>1990</td>
+                        </tr>
+                        <tr>
+                            <td>Eduardo</td>
+                            <td>Nogueira</td>
+                            <td>2002</td>
                         </tr>
                     </tbody>
                 </table>
             </div>
 
-            <section class="col-6">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Nisi et corrupti eaque, eum rem reprehenderit quis. Obcaecati cum facilis corporis pariatur, rerum quasi aperiam, modi officia possimus necessitatibus est quibusdam.
+            <section class="col-12 col-xl-6 fs-4">
+                Use <span>.table-sm</span> para fazer com que as tabelas fiquem mais compactas, 
+                já que o padding das células serão cortados ao meio.
             </section>
         </div>
+
         <nav>
-            <ul class="pagination pagination-sm justify-content-start">
+            <ul class="pagination pagination-sm justify-content-start mt-3">
+                <li class="page-item">
+                    <a class="page-link" href="#">
+                        <span>&laquo;</span>
+                    </a>
+                </li>
+
+                <li class="page-item">
+                    <a class="page-link" href="#tabela1">1</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="#tabela2">2</a>
+                </li>
+
+                <li class="page-item">
+                    <a class="page-link" href="#tabela3">3</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="#tabela4">4</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="#tabela5">5</a>
+                </li>
+
+                <li class="page-item">
+                    <a class="page-link" href="#">
+                        <span>&raquo;</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+
+        <div class="row" id="tabela2">
+            <h2>Table com fundo escuro e zebrado</h2>
+            <hr>
+            <div class="col-12 col-xl-6">
+                <table class="table table-dark table-striped">
+                    <thead>
+                        <tr>
+                            <th>Nome</th>
+                            <th>Sobrenome</th>
+                            <th>Ano Nascimento</th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        <tr>
+                            <td>João</td>
+                            <td>Teste</td>
+                            <td>1999</td>
+                        </tr>
+                        <tr>
+                            <td>Maria</td>
+                            <td>Helena</td>
+                            <td>1980</td>
+                        </tr>
+                        <tr>
+                            <td>Lucas</td>
+                            <td>Silva</td>
+                            <td>1980</td>
+                        </tr>
+                        <tr>
+                            <td>Mateus</td>
+                            <td>Costa</td>
+                            <td>1990</td>
+                        </tr>
+                        <tr>
+                            <td>Eduardo</td>
+                            <td>Nogueira</td>
+                            <td>2002</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <section class="col-12 col-xl-6 fs-4">
+                Combine as classes <span>.table-dark</span> e <span>.table-striped</span> para 
+                criar um fundo escuro e zebrado a tabela
+            </section>
+        </div>
+
+        <nav>
+            <ul class="pagination pagination-sm justify-content-start mt-3">
                 <li class="page-item">
                     <a class="page-link" href="#">
                         <!--Tira a acessibilidade-->
                         <span>&laquo;</span>
                     </a>
                 </li>
+
                 <li class="page-item">
-                    <a class="page-link" href="#">1</a>
+                    <a class="page-link" href="#tabela1">1</a>
                 </li>
                 <li class="page-item">
-                    <a class="page-link" href="table2.html">2</a>
+                    <a class="page-link" href="#tabela2">2</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="#tabela3">3</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="#tabela4">4</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="#tabela5">5</a>
                 </li>
 
                 <li class="page-item">
-                    <a class="page-link" href="#">3</a>
+                    <a class="page-link" href="#">
+                        <span>&raquo;</span>
+                    </a>
                 </li>
+            </ul>
+        </nav>
+
+        <div class="row">
+            <h2>Tabela Hover</h2>
+            <hr>
+            <div class="col-12 col-xl-6">
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th>Nome</th>
+                            <th>Sobrenome</th>
+                            <th>Ano Nascimento</th>
+
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        <tr>
+                            <td>João</td>
+                            <td>Teste</td>
+                            <td>1999</td>
+                        </tr>
+                        <tr>
+                            <td>Maria</td>
+                            <td>Helena</td>
+                            <td>1980</td>
+                        </tr>
+                        <tr>
+                            <td>Lucas</td>
+                            <td>Silva</td>
+                            <td>1980</td>
+                        </tr>
+                        <tr>
+                            <td>Mateus</td>
+                            <td>Costa</td>
+                            <td>1990</td>
+                        </tr>
+                        <tr>
+                            <td>Eduardo</td>
+                            <td>Nogueira</td>
+                            <td>2002</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <section class="col-12 col-xl-6 fs-4">
+                Adicione <span>.tabela-hover</span> para habilitar hover state nas linhas da tabela
+            </section>
+        </div>
+
+        <nav>
+            <ul class="pagination pagination-sm justify-content-start mt-3">
+                <li class="page-item">
+                    <a class="page-link" href="#">
+                        <!--Tira a acessibilidade-->
+                        <span>&laquo;</span>
+                    </a>
+                </li>
+
+                <li class="page-item">
+                    <a class="page-link" href="#tabela1">1</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="#tabela2">2</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="#tabela3">3</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="#tabela4">4</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="#tabela5">5</a>
+                </li>
+
                 <li class="page-item">
                     <a class="page-link" href="#">
                         <!--Tira a acessibilidade-->
@@ -69,6 +300,201 @@
             </ul>
         </nav>
 
+        <div class="row" id="tabela4">
+            <h2>Tabela Legendas</h2>
+            <hr>
+            <div class="col-12 col-xl-6">
+                <table class="table">
+                    <caption>Lista de usuários</caption>
+                    <thead>
+                        <tr>
+                            <th>Nome</th>
+                            <th>Sobrenome</th>
+                            <th>Ano Nascimento</th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        <tr>
+                            <td>João</td>
+                            <td>Teste</td>
+                            <td>1999</td>
+                        </tr>
+                        <tr>
+                            <td>Maria</td>
+                            <td>Helena</td>
+                            <td>1980</td>
+                        </tr>
+                        <tr>
+                            <td>Lucas</td>
+                            <td>Silva</td>
+                            <td>1980</td>
+                        </tr>
+                        <tr>
+                            <td>Mateus</td>
+                            <td>Costa</td>
+                            <td>1990</td>
+                        </tr>
+                        <tr>
+                            <td>Eduardo</td>
+                            <td>Nogueira</td>
+                            <td>2002</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <section class="col-12 col-xl-6 fs-4">
+                Um <span>&lt;caption&gt;</span> funciona como um cabeçalho para a tabela. 
+                Isso ajuda usários de screen readers achar uma tabela e descobrir sobre oquê é 
+                e decidir se eles querem lê-la. 
+                <br><br>
+                <img src="img/img-tabela.png" alt="">
+            </section>
+        </div>
+
+        <nav>
+            <ul class="pagination pagination-sm justify-content-start mt-3">
+                <li class="page-item">
+                    <a class="page-link" href="#">
+                        <!--Tira a acessibilidade-->
+                        <span>&laquo;</span>
+                    </a>
+                </li>
+
+                <li class="page-item">
+                    <a class="page-link" href="#tabela1">1</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="#tabela2">2</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="#tabela3">3</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="#tabela4">4</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="#tabela5">5</a>
+                </li>
+
+                <li class="page-item">
+                    <a class="page-link" href="#">
+                        <!--Tira a acessibilidade-->
+                        <span>&raquo;</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+
+        <div class="row" id="tabela5">
+            <h2>Tabela Responsiva</h2>
+            <hr>
+            <div class="col-12 col-xl-6 table-responsive">
+                <table class="table">
+                    <caption>Lista de usuários</caption>
+                    <thead>
+                        <tr>
+                            <th>Nome</th>
+                            <th>Nome</th>
+                            <th>Nome</th>
+                            <th>Nome</th>
+                            <th>Nome</th>
+                            <th>Nome</th>
+                            <th>Nome</th>
+                            <th>Nome</th>
+                            <th>Nome</th>
+                            <th>Nome</th>
+                            <th>Nome</th>
+                            <th>Nome</th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        <tr>
+                            <td>Patrício</td>
+                            <td>Patrício</td>
+                            <td>Patrício</td>
+                            <td>Patrício</td>
+                            <td>Patrício</td>
+                            <td>Patrício</td>
+                            <td>Patrício</td>
+                            <td>Patrício</td>
+                            <td>Patrício</td>
+                            <td>Patrício</td>
+                            <td>Patrício</td>
+                            <td>Patrício</td>
+                        </tr>
+                        <tr>
+                            <td>Patrício</td>
+                            <td>Patrício</td>
+                            <td>Patrício</td>
+                            <td>Patrício</td>
+                            <td>Patrício</td>
+                            <td>Patrício</td>
+                            <td>Patrício</td>
+                            <td>Patrício</td>
+                            <td>Patrício</td>
+                            <td>Patrício</td>
+                            <td>Patrício</td>
+                            <td>Patrício</td>
+                            <td>Patrício</td>
+                        </tr>
+                        <tr>
+                            <td>Patrício</td>
+                            <td>Patrício</td>
+                            <td>Patrício</td>
+                            <td>Patrício</td>
+                            <td>Patrício</td>
+                            <td>Patrício</td>
+                            <td>Patrício</td>
+                            <td>Patrício</td>
+                            <td>Patrício</td>
+                            <td>Patrício</td>
+                            <td>Patrício</td>
+                            <td>Patrício</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <section class="col-12 col-xl-6 fs-4">
+                Use <span>.table-responsive</span> para fazer que tabelas rolem horizontalmente, 
+                através de todos dispositivos
+            </section>
+        </div>
+
+        <nav>
+            <ul class="pagination pagination-sm justify-content-start mt-3">
+                <li class="page-item">
+                    <a class="page-link" href="#">
+                        <!--Tira a acessibilidade-->
+                        <span>&laquo;</span>
+                    </a>
+                </li>
+
+                <li class="page-item">
+                    <a class="page-link" href="#tabela1">1</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="#tabela2">2</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="#tabela3">3</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="#tabela4">4</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="#tabela5">5</a>
+                </li>
+
+                <li class="page-item">
+                    <a class="page-link" href="#">
+                        <span>&raquo;</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        
     </main>
 
 
