--- a/atividade02/index.html
+++ b/atividade02/index.html
@@ -218,7 +218,7 @@
             </ul>
         </nav>
 
-        <div class="row">
+        <div class="row" id="tabela3">
             <h2>Tabela Hover</h2>
             <hr>
             <div class="col-12 col-xl-6">
